--- a/game.html
+++ b/game.html
@@ -139,7 +139,7 @@ const words=[
 {de:"Ich male Bilder.",ar:"أرسم صورًا."},
 {de:"Wir tanzen im Garten.",ar:"نرقص في الحديقة."},
 {de:"Der Hund frisst Fleisch.",ar:"الكلب يأكل اللحم."},
-{de:"Ich esse Obst.",ar:"آكل فواكه."}
+{de:"Ich esse Obst.",ar:"آكل فواكه."},
 {de:"Wie geht es dir?",ar:"كيف حالك؟"},
 {de:"Ich liebe dich.",ar:"أنا أحبك."},
 {de:"Wo ist der Bahnhof?",ar:"أين تقع محطة القطار؟"},
