--- a/index.html
+++ b/index.html
@@ -162,9 +162,12 @@
     <a href="a1_emails.html" aria-label="إيميلات تدريبية">إيميلات تدريبية</a>
   </div>
   <div class="section">
-    <div class="section-icon"><i class="fas fa-language"></i></div>
-    <a href="vocabulary.html" aria-label="مفردات متقدمة">مفردات متقدمة</a>
-  </div>
+  <div class="section-icon"><i class="fas fa-book-reader"></i></div>
+  <a href="reading.html" aria-label="قراءة وأسئلة">قراءة وأسئلة</a>
+  <p style="margin-top:10px; font-size:16px; color:#555;">
+    اقرأ نصوصًا قصيرة بالألمانية وأجب عن أسئلة لفهم المقروء.
+  </p>
+</div>
   <div class="section">
     <div class="section-icon"><i class="fas fa-question-circle"></i></div>
     <a href="quizzes.html" aria-label="اختبارات قصيرة">اختبارات قصيرة</a>
@@ -181,12 +184,6 @@
   <p>هذا الموقع يهدف إلى مساعدة المبتدئين في تعلم اللغة الألمانية من خلال دروس مبسطة، أمثلة عملية، اختبارات قصيرة، وألعاب تعليمية ممتعة.</p>
 </section>
 
-<!-- قسم تواصل -->
-<section id="contact">
-  <h2>تواصل معنا</h2>
-  <p>يمكنك مراسلتنا عبر البريد الإلكتروني: <a href="mailto:info@german-learn.com">info@german-learn.com</a></p>
-</section>
-
 <!-- التذييل -->
 <footer>
   <p>© 2025 تعلم الألمانية بسهولة - جميع الحقوق محفوظة</p>
@@ -198,6 +195,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
