--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   </div>
   <div class="section">
     <div class="section-icon"><i class="fas fa-pencil-alt"></i></div>
-    <a href="words-examples.html" aria-label="جمل مع أمثلة">جمل مع أمثلة</a>
+    <a href="words-examples.htm" aria-label="جمل مع أمثلة">جمل مع أمثلة</a>
   </div>
   <div class="section">
     <div class="section-icon"><i class="fas fa-envelope-open-text"></i></div>
@@ -195,6 +195,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
